<resources>
    <string name="app_name">Ejercicio6</string>
    <string name="tvTitulo">Bienvenido al juego adivina el número secreto</string>
    <string name="tpNumMax"></string>
    <string name="tpNumMin"></string>
    <string name="tpNumAdv"></string>
    <string name="btnConfirmar">PROBAR SUERTE</string>
    <string name="btnVolverJuego">VOLVER A JUGAR</string>
    <string name="tvIntentos">Intentos Disponibles: 10</string>
    <string name="tvRestantes">Intentos Restantes: </string>
    <string name="tvPista">Pista:</string>
</resources>