<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="413dp"
        android:layout_height="29dp"
        android:layout_marginBottom="702dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/tvTitulo"
            android:textColor="#F44336"
            android:textSize="16sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="413dp"
        android:layout_height="120dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tpNumMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/tpNumMax"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/tpNumMin"
                android:layout_width="231dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/tpNumMin"
                android:textSize="14sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="413dp"
        android:layout_height="279dp"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toTopOf="@+id/ivTesoro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <EditText
            android:id="@+id/tpNumAdv"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/tpNumAdv"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="#FF5722"
            android:fontFamily="@font/aldrich"
            android:onClick="comprobar"
            android:text="@string/btnConfirmar"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic" />
    </FrameLayout>

    <ImageView
        android:id="@+id/ivTesoro"
        android:layout_width="411dp"
        android:layout_height="285dp"
        android:layout_marginBottom="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        app:srcCompat="@drawable/tesoro" />

</androidx.constraintlayout.widget.ConstraintLayout>